--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,19 @@
   background: #2E2F42CC;
 }
 
+.sl-wrapper .sl-close {
+	color: #FFFFFF;
+}
+
+.sl-wrapper .sl-navigation button {
+	color: #FFFFFF;
+}
+
+
+
+
+
+
 
 
 
